--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
         "lint": "eslint \"{**/*,*}.{js,ts,jsx,tsx}\"",
         "prettier": "prettier --write \"{src,tests,example/src}/**/*.{js,ts,jsx,tsx}\"",
         "test": "jest --config jestconfig.json",
-        "prepublishOnly": "npm run antd-less && npm run prettier && npm run lint && webpack"
+        "prepublishOnly": "npm run antd-less && npm run prettier && npm run lint && webpack",
+        "start": "webpack serve --open --config webpack.dev.config.ts"
     },
     "repository": {
         "type": "git",
@@ -24,7 +25,9 @@
     "devDependencies": {
         "@types/node": "^18.7.16",
         "@types/react": "^17.0.49",
+        "@types/react-dom": "^18.0.6",
         "@types/webpack": "^5.28.0",
+        "@types/webpack-dev-server": "^4.7.2",
         "@typescript-eslint/eslint-plugin": "^5.36.2",
         "@typescript-eslint/parser": "^5.36.2",
         "css-loader": "^6.7.1",
@@ -33,12 +36,12 @@
         "eslint-plugin-prettier": "^4.2.1",
         "eslint-plugin-react": "^7.31.8",
         "eslint-plugin-react-hooks": "^4.6.0",
+        "html-webpack-plugin": "^5.5.0",
         "less": "^4.1.3",
         "less-loader": "^11.0.0",
         "mini-css-extract-plugin": "^2.6.1",
+        "moment": "^2.29.4",
         "prettier": "^2.7.1",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2",
         "style-loader": "^3.3.1",
         "ts-loader": "^9.3.1",
         "ts-node": "^10.9.1",
