--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "author": "Yeldos Bakytzhan",
     "license": "ISC",
     "devDependencies": {
+        "@ant-design/icons": "^4.7.0",
+        "@ant-design/pro-table": "^2.80.6",
         "@types/node": "^18.7.16",
         "@types/react": "^17.0.49",
         "@types/react-dom": "^18.0.6",
@@ -34,7 +36,9 @@
         "@types/webpack-dev-server": "^4.7.2",
         "@typescript-eslint/eslint-plugin": "^5.36.2",
         "@typescript-eslint/parser": "^5.36.2",
+        "antd": "^4.23.1",
         "css-loader": "^6.7.1",
+        "css-minimizer-webpack-plugin": "^4.1.0",
         "eslint": "^8.23.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-prettier": "^4.2.1",
@@ -47,8 +51,11 @@
         "moment": "^2.29.4",
         "null-loader": "^4.0.1",
         "prettier": "^2.7.1",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
         "replace-in-file": "^6.3.5",
         "style-loader": "^3.3.1",
+        "terser-webpack-plugin": "^5.3.6",
         "ts-loader": "^9.3.1",
         "ts-node": "^10.9.1",
         "typescript": "^4.8.2",
@@ -56,12 +63,10 @@
         "webpack-cli": "^4.10.0"
     },
     "peerDependencies": {
+        "@ant-design/icons": "=4",
+        "@ant-design/pro-table": "=2",
+        "antd": "=4",
         "react": ">=16",
-        "react-dom": ">=16"
-    },
-    "dependencies": {
-        "@ant-design/icons": "^4.7.0",
-        "@ant-design/pro-table": "^2.80.0",
-        "antd": "^4.23.1"
+        "moment": "=2"
     }
 }
