--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
         "@ant-design/icons": "=4",
         "@ant-design/pro-table": "=2",
         "antd": "=4",
-        "react": ">=16",
-        "moment": "=2"
+        "moment": "=2",
+        "react": ">=16"
     }
 }
