--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     ],
     "scripts": {
         "lint": "eslint \"{**/*,*}.{js,ts,jsx,tsx}\"",
-        "prettier": "prettier --write \"{src}/**/*.{js,ts,jsx,tsx}\"",
+        "prettier": "prettier --write \"src/**/*.{js,ts,jsx,tsx}\"",
         "build": "webpack --config webpack.config.ts",
         "prepublishOnly": "npm run prettier && npm run lint && npm run build",
         "start": "webpack serve --open --config webpack.dev.config.ts"
