--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "@typescript-eslint/eslint-plugin": "^5.48.1",
         "@typescript-eslint/parser": "^5.48.1",
         "antd": "^5.1.4",
+        "antd-table-saveas-excel": "^2.2.1",
         "css-loader": "^6.7.3",
         "css-minimizer-webpack-plugin": "^4.2.2",
         "dayjs": "^1.11.7",
@@ -38,6 +39,7 @@
         "eslint-plugin-prettier": "^4.2.1",
         "eslint-plugin-react": "^7.31.11",
         "eslint-plugin-react-hooks": "^4.6.0",
+        "file-saver": "^2.0.5",
         "html-webpack-plugin": "^5.5.0",
         "mini-css-extract-plugin": "^2.7.2",
         "prettier": "^2.8.2",
